Se adicionan modificaciones a pantalla.

--- a/src/app/historial/historial.component.html
+++ b/src/app/historial/historial.component.html
@@ -32,7 +32,7 @@
   <!-- Ícono que abre el calendario -->
   <mat-icon 
     matSuffix 
-    style="margin-left: 1%; cursor: pointer;" 
+    style="margin-left: 1%; margin-top: 1%; cursor: pointer;" 
     (click)="openCalendar()"
     (keydown)="openCalendar()">
     calendar_today
@@ -54,7 +54,7 @@
       <p>07:00 am</p>
       <div class="medication-details">
         <span class="medication-description">Pastilla dolex dolor de cabeza</span>
-        <span class="medication-date">02/03/2025</span>
+        <span class="medication-date" style="margin-top: -1.5%;">02/03/2025</span>
       </div>
     </div>
   </mat-card>
