Feature modificar informacion

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,19 @@
 <mat-toolbar color="primary">
-  <!-- Ícono de usuario a la izquierda -->
-  <button mat-icon-button>
+  <!-- Ícono de usuario con menú desplegable -->
+  <button mat-icon-button [matMenuTriggerFor]="userMenu">
     <mat-icon>account_circle</mat-icon>
   </button>
+  
+  <mat-menu #userMenu="matMenu">
+    <button mat-menu-item (click)="editarPerfil()">
+      <mat-icon>edit</mat-icon>
+      Editar perfil
+    </button>
+    <button mat-menu-item (click)="cerrarSesion()">
+      <mat-icon>logout</mat-icon>
+      Cerrar sesión
+    </button> 
+  </mat-menu>
 
   <span class="spacer"></span> <!-- Empuja los otros iconos a la derecha -->
 
